Updated to correct order of site pages
Changed index.html from one file to another

--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
+<meta http-equiv="refresh" content="5;URL=home_page.html">
 </head>
 <body>
-    <div id ="home">
-            <a href="html/memories" class="memories">Memories</a>
-            <a href="html/quotes" class="quotes">Quotes</a>
-            <a href="https://forms.gle/VrdpXmDVpLvPzZm48" class="forms">Please Provide Input!</a>
-            <img src="bdev.jpg">
+<h1>
+Patience, my friend.
+</h1>
+<p id="demo">
 
-        
+</p>
+
+<script>
+var timer = 600;
+var x = setInterval(function() {
+    timer -= 1;
+    var minutes = Math.floor(timer / 60);
+    var seconds = Math.floor(timer % 60);
+    document.getElementById("demo").innerHTML = minutes + " minutes and " + seconds + " seconds";
+    if (timer < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED" 
+}
+    }, 1000);
+</script>
+<h2>
+</div>
+</p>
+</h2>
 </body>
 </html>
